--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="main">
     <div id="gameboard"></div>
-    <p>It is <span id="player"></span>Go.</p>
+    
+</div>
+<p>It is <span id="player"></span>Go.</p>
     <p id="info-display"></p>
     <script src="pieces.js"> </script>
     <script src="app.js"></script>
@@ -16,4 +19,4 @@
 </body>
 </html>
 
-//video 32:02
+//video 35:00
