--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="gameboard"></div>
     
 </div>
-<p>It is <span id="player"></span>Go.</p>
+<p>It's ,<span id="player"></span>'s turn.</p>
     <p id="info-display"></p>
     <script src="pieces.js"> </script>
     <script src="app.js"></script>
@@ -19,5 +19,5 @@
 </body>
 </html>
 
-//video 35:00
+//video 42:40
 
